# RL2025_Technical_Project

./: README.md
PX4-Autopilot_MOD/Tools/simulation/gz/models/x500/: model.sdf
PX4-Autopilot_MOD/Tools/simulation/gz/models/x500_base/: model.sdf
PX4-Autopilot_MOD/Tools/simulation/gz/worlds/: default.sdf  default_backup.sdf
offboard_rl/: CMakeLists.txt  package.xml
offboard_rl/launch/: monitor.launch.py
offboard_rl/rviz/: drone_conf.rviz
offboard_rl/src/: go_to_point_server.cpp  px4_monitor_node.cpp  trajectory_drone_manager.cpp
offboard_rl/srv/: CheckAtBase.srv  DronePose.srv
panda_configuration/: README.md
panda_configuration/panda_description/: meshes
panda_configuration/panda_description/panda/: model.sdf
panda_configuration/panda_description/scripts/: xacro2sdf.bash  xacro2urdf.bash
panda_configuration/panda_description/urdf/: panda.gazebo  panda.ros2_control  panda.urdf  panda.urdf.xacro  panda_arm.xacro  panda_gripper.xacro
panda_configuration/panda_moveit_config/: package.xml
panda_configuration/panda_moveit_config/config/: controllers_effort.yaml  controllers_position.yaml  servo.yaml  trajectory_execution.yaml
panda_configuration/panda_moveit_config/launch/: move_group.launch.py
panda_configuration/panda_moveit_config/srdf/: panda.srdf  panda.srdf.xacro
panda_execution/: CMakeLists.txt  package.xml
panda_execution/examples/cpp/: node_manager.cpp  panda_move_task.cpp  panda_pick_task_srv.cpp  panda_scan_server.cpp  pick_n_place_manager.cpp  px4_monitor_node.cpp  visual_servoing.cpp
panda_execution/examples/py/: grip_monitor_node.py  px4_to_tf.py
panda_execution/launch/: default.launch.py  drone_publisher.launch.py  panda_spawn.launch.py
panda_execution/launch/robots/: robot_panda.launch.py
panda_execution/launch/worlds/: world_mine.launch.py
panda_execution/model/aruco_box/: aruco_marker_original_75.blend  model.mtl  model.sdf
panda_execution/srv/: MoveToPose.srv
panda_execution/worlds/: my_world.sdf  scatola.sdf
