<?xml version="1.0"?>
<package format="3">
  <name>panda_execution</name>
  <version>1.0.0</version>
  <description>C++ and Python examples of using MoveIt 2</description>
  <maintainer email="orsula.andrej@gmail.com">Andrej Orsula</maintainer>
  <author>Andrej Orsula</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>shape_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_task_constructor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>aruco_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>offboard_rl</depend>
  <depend>sensor_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>moveit</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <exec_depend>panda_description</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>